修改项目bug